--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "gsap": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
