--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-json": "^2.9.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "gsap": "^3.5.1",
     "prop-types": "^15.7.2",
