--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
     "react-scroll-parallax": "^2.3.5",
     "read-more-react": "^1.0.10",
